Fixes to alignment.  Fixes to mobile.

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -146,6 +146,8 @@ nav
   background-size: cover
   position: sticky
   top: 0
+  .navbar-brand
+    margin-top: 3rem
 
 #nav-container 
   height: 100%
